# STM32_CMake_tmp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCMSIS.cmake  GitUtils.cmake  gcc_stm32.cmake  gcc_stm32f3.cmake
cmake/vscode_templates/: c_cpp_properties.json.in  launch.json.in  tasks.json.in
inc/: blink.h  main.h
src/: blink.c  main.c
